portfolio/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-web
spec:
  selector:
    matchLabels:
      app: portfolio
  replicas: 1
  template:
    metadata:
      labels:
        app: portfolio
    spec:
      containers:
      - name: nginx
        image: registry.digitalocean.com/krasnov/portfolio-web:alpha
        ports:
        - containerPort: 80
