portfolio/templates/ingress-redirect.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: portfolio-redirect-ingress
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`denniskrasnov.com`)
    kind: Rule
    middlewares:
      - name: portfolio-redirect
  - match: Host(`krasnov.dev`)
    kind: Rule
    services:
    - name: portfolio-web
      namespace: portfolio
      port: 80
  tls:
    certResolver: letsencrypt
