portfolio/templates/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: portfolio-ingress
spec:
  entryPoints:
    - web # Required to redirect from HTTP denniskrasnov.com
    - websecure
  routes:
  - match: Host(`krasnov.dev`)
    kind: Rule
    services:
    - name: portfolio-web
      namespace: portfolio
      port: 80
  - match: Host(`denniskrasnov.com`)
    kind: Rule
    services:
    # Dummy service, won't ever be reached
    - name: portfolio-web
      namespace: portfolio
      port: 80
    middlewares:
    - name: portfolio-redirect
  tls:
    certResolver: letsencrypt
